--- a/src/app/components/navbar/nav.css
+++ b/src/app/components/navbar/nav.css
@@ -6,7 +6,6 @@
 }
 
 #nav img {
-    mix-blend-mode: color-burn;
     height: 100px;
 }
 
@@ -19,10 +18,10 @@
 
 #nav a {
     pointer-events: all;
-    color: black;
+    color: #1F3D2B;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 650;
     letter-spacing: 2px;
 }
@@ -55,10 +54,6 @@
 .line3-open {
   transform: translateY(-9px) rotate(-45deg);
 }
-
-/* ---------------------------
-   MOBILE DROPDOWN MENU
----------------------------- */
 
 #mobile-menu {
   position: absolute;
